--- a/Xero.Api/Xero.Api.csproj
+++ b/Xero.Api/Xero.Api.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\HasValidationErrors.cs" />
     <Compile Include="Common\IHasId.cs" />
     <Compile Include="Common\IPageableEndpoint.cs" />
     <Compile Include="Common\IXeroReadEndpoint.cs" />
